--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-/doctype html>
+</doctype html>
 <html lang ="en" >
     <head>
         <meta charset="utf-8">
@@ -8,3 +8,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <title>Persona Final</title>
     </head>
+    <body>
+
+        <nav class="navbar fixed-top navbar-expand-sm text-center">
+            <!-- <img src="images/persona.png" class="persona_image image-fluid shadow" href="#image"> -->
+            <div class=" text-center align-items-center justify-content-center">
+                <a class="navbar-brand text-center" href="#title">Personas & Storyboarding</a>
+            </div>
+            <img src="images/persona.png" class="persona_image_2 image-fluid shadow" href="#image">
+        </nav>
+
+    </body>
+</html>
