--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         <nav class="navbar fixed-top navbar-expand-sm text-center">
             <!-- <img src="images/persona.png" class="persona_image image-fluid shadow" href="#image"> -->
             <div class=" text-center align-items-center justify-content-center">
-                <a class="navbar-brand text-center" href="#title">Personas & Storyboarding</a>
+                <a class="navbar-brand text-center" href="#title">Persona's & Storyboarding</a>
             </div>
         </nav>
+
+        <div clas="d-flex flex-column align-items-center justify-content-center intro_divider">
+            <img src="images/persona.png" class="persona_image image-fluid shadow">
+            <h1>Welcome to Persona</h1>
+            <h3 class="fw-light">A dive into users <medium class="medium text-uppercase text-center fw-light">Interactions</medium>with interfaces</h3>
+        </div>
 
     </body>
 </html>
