--- a/index.html
+++ b/index.html
@@ -3,25 +3,206 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel = "stylesheet" href="bootstrap.css">
+
         <link rel = "stylesheet" href="style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <title>Persona Final</title>
+        <title>Persona and StoryBoard</title>
     </head>
     <body>
 
-        <nav class="navbar fixed-top navbar-expand-sm text-center">
-            <!-- <img src="images/persona.png" class="persona_image image-fluid shadow" href="#image"> -->
+        <!-- <nav class="navbar  navbar-expand-sm text-center">
             <div class=" text-center align-items-center justify-content-center">
                 <a class="navbar-brand text-center" href="#title">Persona's & Storyboarding</a>
             </div>
+        </nav> -->
+<!-- 
+        <div clas="d-flex align-items-center justify-content-center intro_divider"> 
+            <img src="images/persona.png" class="persona_image">
+            <h1 class="text-center">Welcome to Persona</h1>
+        </div> -->
+
+        <nav class="navbar navbar-expand-sm fixed-top">
+            <div class=" container-fluid text-center">
+                <a class="nav-brand text-uppercase fw-bolder text-white" href="#start">Persona's</a>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav ms-auto m-1">
+                        <li class = "nav-item fw-lighter shadow "><a class="nav-link text-white" href="#About">About</a></li>
+                        <li class = "nav-item fw-lighter shadow"><a class="nav-link text-white" href="#Observations">Observations</a></li>
+                        <li class = "nav-item fw-lighter shadow"><a class="nav-link text-white" href="#Questions">Questions</a></li>
+                        <li class = "nav-item fw-lighter shadow"><a class="nav-link text-white" href="#Answers">Answers</a></li>
+                        <li class = "nav-item fw-lighter shadow"><a class="nav-link text-white" href="#Empathyboard">Empathy Map</a></li>
+                        <li class = "nav-item fw-lighter shadow"><a class="nav-link text-white" href="#Storyboard">Storyboard</a></li>
+                        <li class = "nav-item fw-lighter shadow"><a class="nav-link text-white" href="#Reflection">Reflection</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
-        <div clas="d-flex flex-column align-items-center justify-content-center intro_divider">
-            <img src="images/persona.png" class="persona_image image-fluid shadow">
-            <h1>Welcome to Persona</h1>
-            <h3 class="fw-light">A dive into users <medium class="medium text-uppercase text-center fw-light">Interactions</medium>with interfaces</h3>
+        <div class="d-flex flex-column align-items-center justify-content-center intro_divider">
+            <img src="images/persona.png" class="persona_image">
+            <h1>Welcome to Persona!</h1>
         </div>
+
+        <div class="about_divider"id="title">
+            <h1 id="About" >Project Introduction</h1>
+            <div class="chips_divider" id="image">
+                <img src="images/doritoshelf.png" class="dorito_image " ><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span>
+            </div>
+            <p class="">
+                <ul class="project_intro">
+                    The purpose of this project is to expose us to the classical work of designers - 
+                    the process of creating personas and sketching storyboards for those personas. 
+                    Personas are crucial so that designers avoid falling into the trap of self-referential
+                    design - when designers project their motivations, emotions, and mental models into creating 
+                    an interface, rendering that interface futile for most of their audience. Furthermore, 
+                    personas ensure that designers gain an in-depth understanding of the interface's function
+                    and purpose so that designers would not tailor the interface to edge cases among users such 
+                    as infrequent and extreme users. It is important to note that generating personas is complex, 
+                    as it requires designers to interact with users. A designer needs to choose an interface, 
+                    observe how users interact with it, draft questions, interview users about their experience 
+                    with the interface, synthesize the answers from the interview to produce personas, and then use 
+                    those personas to imagine how different users would interact with the interface. “Personas and Storyboards” 
+                    had us follow the steps listed above. This project aims to have us step into the shoes of users as they interact with
+                    user interfaces. 
+                </ul>
+            </p>
+            <br>
+            <h1 class="interface_title">Interface Introduction</h1>
+            <div class="chips_divider">
+                <img src="images/doritoshelf.png" class="dorito_image " ><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span>
+            </div>
+                <ul class="interface_intro fw-light">
+                    After pondering over different interface options around me, I chose vending machines as the interface that I will study. 
+                    Vending machine’s provide us with an assortment of enticing but unhealthy snacks. 
+                    The colorful arrangement of snacks can be described as betwitching. 
+                    They are especially useful for someone who is occupied but in desperate need of a quick relief 
+                    of either their cravings, hunger, or stress achieved. Vending machine’s 
+                    biggest selling point apart from their snacks has to be their convenience. All an user needs to do to eat to their 
+                    heart's content is to either insert coins,bills, or swipe a debit/credit card and when then press buttons on the keypad 
+                    to indicate which snack they want. Afterwards, the user would need to bend down to get the snack from the flap found 
+                    towards the bottom of the vending machine. The ideal vending machine experience would be one where it takes longer to 
+                    choose a snack than to actually buy the snack. The interface of vending machines can be described as being quite simple to 
+                    understand.
+                </ul>
+                <br>
+                <ul class="interface_image_intro">Below is an image describing components of the vending machine interface:</ul>
+            </p>
+
+            <div class="row justify-content-center align-items-center">
+                <div class="col-sm-4 shadow interface_image_col">
+                    <img src="images/vendingmachine.png" class="vending_machine_image shaodw"/>
+                    <span><img src="images/interface.png" class="interface_image shadow"/></span>
+                </div>
+            </div>
+            <div>
+                <ul class="interface_parts_description">
+                    <div class="badge1 text-dark font justify-content-center align-items-center"><p class="text-center">1a. Device users can use to pay with cash if card is not an option</p></div>
+                    <!-- <br> -->
+                    <div class="badge1 text-dark justify-content-center align-items-center "><br><p class="text-center">1b. Screen that shows users snack number inputted</p></div>
+                    <!-- <br> -->
+                    <div class="badge1 text-dark justify-content-center align-items-center"><br><p class="text-center">1c. Buttons user presses to choose a snack</p></div>
+                    <!-- <br> -->
+                    <div class="badge1  text-dark justify-content-center align-items-center"><p class="text-center">1d. Device users use to pay by swiping card or scanning chip on card</p></div>
+                    <!-- <br> -->
+                    <div class="badge1 text-dark justify-content-center align-items-center "><br><p class="text-center">2. Flap that users must open to retrieve snack</p></div>
+                </ul>
+                </ul>
+            </div>
+
+        </div>
+        <!-- observations -->
+        <div class="observation_divider">
+            <h1 id="Observations">Observations</h1>
+            <div class="chips_divider">
+                <img src="images/doritoshelf.png" class="dorito_image " ><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span>
+            </div>
+            <ul class="observations_list">
+                <li class="bullet">Number of items bought by users varied - some bought multiple while others at most bought one.</li>
+                <!-- <br> -->
+                <li class="bullet">Not all users bought snacks - some just stared, swiped their card to possibly check their amount of flex points remaining, and then lef.t</li>
+                <!-- <br> -->
+                <li class="bullet">Users take time to choose what snack they want</li>
+                <!-- <br> -->
+                <li class="bullet">Some users like to check the price of various items before buying while others do not.</li>
+                <!-- <br> -->
+                <li class="bullet">The most common form of payment was by swiping their Brown ID.</li>
+                <!-- <br> -->
+                <li class="bullet">Some users swipe their card multiple times in different orientantions as they struggled to understand why their payment had not been processed the first time.</li>
+                <!-- <br> -->
+                <li class="bullet">All users had to bend down to get their snacks</li>  
+                <!-- <br> -->
+                <li class="bullet">Some users brought their snack to where they are sitting, while others left with their snacks.</li>
+            </ul>
+            <br>
+        </div>
+        <!-- questions -->
+        <div class="questions_divider" id="Questions">
+            <h1>Questions</h1>
+            <div class="chips_divider">
+                <img src="images/doritoshelf.png" class="dorito_image " ><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span>
+            </div>
+            <ul class="questions_list">
+                <li> Do you use the vending machine? </li>
+                <li> Could you describe the process you take to use vending machines.</li>
+                <li> How many items do you usually buy from the vending machine?</li>
+                <li> What is your impression of the vending machines?</li>
+                <li> How does the vending machine’s at Brown U compare to the vending machines you are used to back home?</li>
+                <li> What do you think can be done to improve vending machines interface?</li>
+            </ul>
+
+        </div>
+        <!-- answers -->
+        <div class="answers_divider" id="Answers">
+            <h1>Answers</h1>
+            <div class="chips_divider">
+                <img src="images/doritoshelf.png" class="dorito_image " ><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span>
+            </div>
+            <ul class="answers_list">
+                <li class="bullet">Main reasons for using vending machines is convenience and proximity.</li>
+                <li class="bullet">Not all vending machinesa around campus accept Brown ID, so users expressed confusion.</li>
+                <li class="bullet">Some users were not sure whether one should swipe first and then input snack number or vice versa.</li>
+                <li class="bullet">Some users were confused over what direction they should swipe their Brown ID. The confusion became more apparent when the machine did not process payment the first time.</li>
+                <li>Some users had experience moments where their snack would get stuck and they would have to either bang on the screen to make it fall or purchase another snack. Likewise, some users had experienced
+                    moments where it would be diffucult to open the flap to get the snack because the snack is too wide. Finnaly, Some users mind that sometimes when the item falls it falls to the back and they have to stretch their arms to get it.</li>
+                 <li>Some users appreciate that the font on vending machines is big and that it contrast snicely with the green background on the screen because those details makes the vending machine easier to read 
+                    when compared to other vending machine models they have encountered.</li>
+            </ul>
+            <br>
+        </div>
+        <!-- empathy map -->
+        <div class="empathy_map_divider" id="Empathyboard">
+            <h1>Empathy Maps</h1>
+            <div class="chips_divider">
+                <img src="images/doritoshelf.png" class="dorito_image " ><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span>
+            </div>
+            <div class="row justify-content-center align-items-center ">
+                <div class="col-sm-4  justify-content-center align-items-center alicia_col">
+                    <img src ="images/alicia.png" class="alicia_persona justify-content-center align-items-center">
+                </div >
+                <div class="col-sm-4  eric_col">
+                    <img src="images/eric.png" class="eric_persona">
+                </div>
+
+            </div>
+        </div>
+        
+        <!-- story board -->
+        <div class="storyboard_divider" id="Storyboard">
+            <h1>Story Board</h1>
+            <div class="chips_divider">
+                <img src="images/doritoshelf.png" class="dorito_image " ><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span>
+            </div>
+        </div>
+
+        <!-- reflection -->
+        <div class="reflection_divider" id="Reflection">
+            <h1>Project Reflecttion</h1>
+            <div class="chips_divider">
+                <img src="images/doritoshelf.png" class="dorito_image " ><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span><span><img src="images/doritoshelf.png" class="dorito_image " ></span>
+            </div>
+
+        </div>
+        
 
     </body>
 </html>
