--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="d-flex flex-column align-items-center justify-content-center intro_divider">
             <img src="images/persona.png" class="persona_image">
-            <h1>Welcome to Persona!</h1>
+            <h1 class="text-black">Welcome to Persona!</h1>
         </div>
 
         <div class="about_divider"id="title">
